länkar + contact.html form

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -153,6 +153,15 @@ body {
 }
 /* Här slutar login styling */
 
+.BGLIGHT {
+    background-image: url(krilog.png);
+}
+
+.mrkontakt {
+    color: #fff;
+    text-align: center;
+}
+
 @media screen and (max-width: 576px){
     .widht-select {
         width: 50vw;
