--- a/views/login.html
+++ b/views/login.html
@@ -65,7 +65,7 @@
             <button type="submit" class="butn">Logga in</button>
 
             <div class="register-link">
-                <p> Har du inget konto?<a href="register.html"> Registrera dig här!</a></p>
+                <p> Har du inget konto?<a href="/Registrering"> Registrera dig här!</a></p>
             </div>
          </form>
         </div>
