--- a/views/register.html
+++ b/views/register.html
@@ -64,10 +64,10 @@
                     <label for="email" class="form-label">
                         <h4>Mejladress</h4>
                     </label><br>
-                    <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress...">
+                    <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..." value={{entered_email}}>
                     <p><small>{{no_email_feedback}}</small></p>
                     <label for="birthday">
-                        <h4 class="mt-4">Födelsedatum</h4>
+                        <h4 class="mt-3">Födelsedatum</h4>
                     </label>
 
                     <input class="form-control" type="date" id="birthday" name="birthday">
@@ -76,12 +76,11 @@
 
 
                     <label for="pwd">
-                        <h4 class="mt-4">Lösenord</h4>
+                        <h4 class="mt-3">Lösenord</h4>
                     </label>
+                    <input class="form-control" type="password" id="pwd" name="pwd">
                     <p><small>{{no_pwd_feedback}}</small></p>
                     <p><small>{{pwd_feedback}}</small></p>
-
-                    <input class="form-control" type="password" id="pwd" name="pwd">
                     <input class="mt-2" type="checkbox" onclick="togglePassword()"> Visa lösenord
                     <br>
                     <input type="submit" value="Registrera mig" class="btn btn-dark mt-4">
