--- a/views/register.html
+++ b/views/register.html
@@ -65,22 +65,22 @@
                         <h4>Mejladress</h4>
                     </label><br>
                     <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..." value={{entered_email}}>
-                    <p><small>{{no_email_feedback}}</small></p>
+                    <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
                     <label for="birthday">
                         <h4 class="mt-3">Födelsedatum</h4>
                     </label>
 
                     <input class="form-control" type="date" id="birthday" name="birthday">
-                    <p><small>{{no_birthday_feedback}}</small></p>
-                    <p><small>{{age_feedback}}</small></p>
+                    <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
+                    <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
 
 
                     <label for="pwd">
                         <h4 class="mt-3">Lösenord</h4>
                     </label>
                     <input class="form-control" type="password" id="pwd" name="pwd">
-                    <p><small>{{no_pwd_feedback}}</small></p>
-                    <p><small>{{pwd_feedback}}</small></p>
+                    <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
+                    <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
                     <input class="mt-2" type="checkbox" onclick="togglePassword()"> Visa lösenord
                     <br>
                     <input type="submit" value="Registrera mig" class="btn btn-dark mt-4">
