--- a/views/register.html
+++ b/views/register.html
@@ -70,7 +70,7 @@
                         <h4 class="mt-3">Födelsedatum</h4>
                     </label>
 
-                    <input class="form-control" type="date" id="birthday" name="birthday">
+                    <input class="form-control" type="date" id="birthday" name="birthday" value={{entered_birthdate}}>
                     <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
 
