--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -24,14 +24,18 @@
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="index.html">Hem</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="index.html">Hem</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="chrisis_tips.html">Krishantering</a>
                         <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="chrisis_tips.html">Krishantering</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="publish_post.html">Publicera inlägg</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="publish_post.html">Publicera inlägg</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="contact.html">Kontakta oss</a>
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="contact.html">Kontakta oss</a>
                     </li>
                     <li class="nav-item">
