--- a/views/contact.html
+++ b/views/contact.html
@@ -111,7 +111,7 @@
                 </div>
             </aside>
 
-            <main class="col-12 col-md-9 p-0">
+            <main class="col-12 col-md-9">
                 <!-- Contact 1 - Bootstrap Brain Component -->
 <section class="BGLIGHT">
     <div class="container-fluid">
