--- a/views/contact.html
+++ b/views/contact.html
@@ -93,40 +93,10 @@
                                 would look in a real-world application.</div>
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseFour" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                Accordion Item #4
-                            </button>
-                        </h2>
-                        <div id="flush-collapseFour" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
-                                body. Nothing more exciting happening here in terms of content, but just filling up the
-                                space to make it look, at least at first glance, a bit more representative of how this
-                                would look in a real-world application.</div>
                 </div>
             </aside>
 
             <main class="col-12 col-md-9">
-                <!-- Contact 1 - Bootstrap Brain Component -->
-<section class="BGLIGHT">
-    <div class="container-fluid">
-      <div class="row justify-content-md-center">
-        <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
-          <h2 class="mrkontakt">Kontakta oss!</h2>
-          <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
-        </div>
-      </div>
-    </div>
-  
-    <div class="container-fluid">
-      <div class="row justify-content-lg-center">
-        <div class="col-12 col-lg-9 p-0">
-          <div class="bg-white border rounded shadow-sm overflow-hidden">
   
             <form action="#!">
               <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
@@ -168,6 +138,13 @@
               </div>
             </form>
   
+  
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
           </div>
         </div>
       </div>
@@ -184,6 +161,7 @@
                 <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
                 <div class="col-10"></div>
             </div>
+
         </div>
     </footer>
 
