--- a/views/contact.html
+++ b/views/contact.html
@@ -35,7 +35,8 @@
                         <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Kontakt">Kontakta oss</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga in">Logga in</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga in">Logga in/
+                            <br>Registrera dig</a></a>
                     </li>
                 </ul>
             </div>
