--- a/views/login.html
+++ b/views/login.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/stylesheet.css">
+    <!--BootsratpIcons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -56,14 +58,30 @@
                         <input type="password" name="password" placeholder="Lösenord" required>
                         <i class='bx bxs-lock'></i>
                     </div>
-    
+
                     <div class="remember-forgot">
                         <label><input type="checkbox"> Kom ihåg mig!</label>
                         <a href="#">Glömt lösenord?</a>
                     </div>
-    
+
                     <button type="submit" class="butn">Logga in</button>
-    
+                    %if checked_login_details == "wrong":
+                        <div class="alert alert-danger mt-3" role="alert">
+                            <p class="text-center mb-0 mt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+                                    <path
+                                        d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z" />
+                                    <path
+                                        d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z" />
+                                </svg>
+
+                                Fel användarnamn eller lösenord!
+                            </p>
+                        </div>
+                    %end
+
+
                     <div class="register-link">
                         <p>Har du inget konto? <a href="/Registrering">Registrera dig här!</a></p>
                     </div>
@@ -71,7 +89,7 @@
             </div>
         </div>
     </main>
-        <!--Footer-->
+    <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="row">
