--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -47,7 +47,7 @@
         <div class="row border-bottom">
             <div class="col-md-3 general_light_blue"></div>
             <div class="col-md-9 py-3">
-                <h1 class="ms-4">Krishantering</h1>
+                <h1 class="ms-4 mt-4">Krishantering</h1>
                 <h5 class="ms-4">Här hittar du användbar information om hur du som privatperson bör agera i  olika
                     typer av nödsituationer, samt vem du kan kontakta i händelse av kris.</h5>
             </div>
