--- a/views/contact.html
+++ b/views/contact.html
@@ -2,174 +2,171 @@
 <html lang="sv">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logga in</title>
-    <!--BootstrapCSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/stylesheet.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Logga in</title>
+  <!--BootstrapCSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/stylesheet.css">
 </head>
 
 <body>
-    <!--BootStrap NavBar-->
-    <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
-        <div class="container d-md-flex justify-content-end">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/">Hem</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Krishantering">Krishantering</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Ny">Publicera inlägg</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Kontakt">Kontakta oss</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga in">Logga in/
-                            <br>Registrera dig</a></a>
-                    </li>
-                </ul>
+  <!--BootStrap NavBar-->
+  <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
+    <div class="container d-md-flex justify-content-end">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/">Hem</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Krishantering">Krishantering</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Ny">Publicera inlägg</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Kontakt">Kontakta oss</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga in">Logga in/
+              <br>Registrera dig</a></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container-md mb-5">
+    <div class="row">
+      <aside class="col-12 col-md-3 general_light_blue">
+        <h3 class="mt-4 text-center">Vanliga frågor</h3>
+        <div class="accordion accordion-flush mt-3 mb-5 mx-2" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"> Fråga1
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion
+                body.</div>
             </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Accordion Item #2
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion
+                body. Let's imagine this being filled with some actual content.</div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Accordion Item #3
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
+                body. Nothing more exciting happening here in terms of content, but just filling up the
+                space to make it look, at least at first glance, a bit more representative of how this
+                would look in a real-world application.</div>
+            </div>
+          </div>
         </div>
-    </nav>
+      </aside>
 
-    <div class="container-md mb-5">
-        <div class="row">
-            <aside class="col-12 col-md-3 general_light_blue">
-                <h3 class="mt-4 text-center">Vanliga frågor</h3>
-                <div class="accordion accordion-flush mt-3 mb-5 mx-2" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                aria-controls="flush-collapseOne"> Fråga1
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion
-                                body.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                                Accordion Item #2
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion
-                                body. Let's imagine this being filled with some actual content.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                Accordion Item #3
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
-                                body. Nothing more exciting happening here in terms of content, but just filling up the
-                                space to make it look, at least at first glance, a bit more representative of how this
-                                would look in a real-world application.</div>
-                        </div>
-                    </div>
-                </div>
-            </aside>
-
-            <main class="col-12 col-md-9">
-  
-            <form action="#!">
-              <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
-                <div class="col-12">
-                  <label for="fullname" class="form-label">Fullständigt namn <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="fullname" name="fullname" value="" required>
-                </div>
-                <div class="col-12 col-md-6">
-                  <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
-                  <div class="input-group">
-                    <span class="input-group-text">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
-                      </svg>
-                    </span>
-                    <input type="email" class="form-control" id="email" name="email" value="" required>
-                  </div>
-                </div>
-                <div class="col-12 col-md-6">
-                  <label for="phone" class="form-label">Telefonnummer</label>
-                  <div class="input-group">
-                    <span class="input-group-text">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
-                        <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-                      </svg>
-                    </span>
-                    <input type="tel" class="form-control" id="phone" name="phone" value="">
-                  </div>
-                </div>
-                <div class="col-12">
-                  <label for="message" class="form-label">Meddelande <span class="text-danger">*</span></label>
-                  <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
-                </div>
-                <div class="col-12">
-                  <div class="d-grid">
-                    <button class="btn btn-primary btn-lg" type="submit">Skicka!</button>
-                  </div>
-                </div>
+      <main class="col-12 col-md-9">
+        <h1 class="ms-4 mt-4">Kontakta oss</h1>
+        <form action="#!">
+          <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
+            <div class="col-12">
+              <label for="fullname" class="form-label">Fullständigt namn <span class="text-danger">*</span></label>
+              <input type="text" class="form-control" id="fullname" name="fullname" value="" required>
+            </div>
+            <div class="col-12 col-md-6">
+              <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
+              <div class="input-group">
+                <span class="input-group-text">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-envelope" viewBox="0 0 16 16">
+                    <path
+                      d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+                  </svg>
+                </span>
+                <input type="email" class="form-control" id="email" name="email" value="" required>
               </div>
-            </form>
-  
-  
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-            </main>
-
-        </div>
-    </div>
-    <!--Footer-->
-    <footer class="footer bg-dark p-3" data-bs-theme="dark">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
-                <div class="col-10"></div>
             </div>
+            <div class="col-12 col-md-6">
+              <label for="phone" class="form-label">Telefonnummer</label>
+              <div class="input-group">
+                <span class="input-group-text">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-telephone" viewBox="0 0 16 16">
+                    <path
+                      d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                  </svg>
+                </span>
+                <input type="tel" class="form-control" id="phone" name="phone" value="">
+              </div>
+            </div>
+            <div class="col-12">
+              <label for="message" class="form-label">Meddelande <span class="text-danger">*</span></label>
+              <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
+            </div>
+            <div class="col-12">
+              <div class="d-grid">
+                <button class="btn btn-primary btn-lg" type="submit">Skicka!</button>
+              </div>
+            </div>
+          </div>
+        </form>
 
-        </div>
-    </footer>
 
-    <!--BootstrapJS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    </div>
+  </div>
+  </div>
+  </div>
+  </section>
+
+  </div>
+  </div>
+  </div>
+  </div>
+  </section>
+  </main>
+
+  </div>
+  </div>
+  <!--Footer-->
+  <footer class="footer bg-dark p-3" data-bs-theme="dark">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
+        <div class="col-10"></div>
+      </div>
+
+    </div>
+  </footer>
+
+  <!--BootstrapJS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
