--- a/views/register.html
+++ b/views/register.html
@@ -73,14 +73,14 @@
                             </svg>
                         </span>
                         <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..."
-                            value={{entered_email}}>
+                            value={{email}}>
                     </div>
                     <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
                     <label for="birthday">
                         <h4 class="mt-3">Födelsedatum</h4>
                     </label>
 
-                    <input class="form-control" type="date" id="birthday" name="birthday" value={{entered_birthdate}}>
+                    <input class="form-control" type="date" id="birthday" name="birthday" value={{birthday}}>
                     <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
 
@@ -95,12 +95,7 @@
                     <br>
                     <input type="submit" value="Registrera mig" class="btn btn-dark mt-4">
                 </form>
-                <h2>{{welcome_new_user}}</h2>
-
-
-
-
-
+        
             </main>
         </div>
     </div>
