--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -35,7 +35,7 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga in">Logga in/
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
                             <br>Registrera dig</a></a>
                     </li>
                 </ul>
