--- a/views/register.html
+++ b/views/register.html
@@ -36,7 +36,7 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga in">Logga in/
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
                             <br>Registrera dig</a>
                     </li>
                 </ul>
