--- a/views/login.html
+++ b/views/login.html
@@ -48,7 +48,7 @@
     <main>
         <div class="container-login">
             <div class="container-lg">
-                <form action="/Logga in" method="POST">
+                <form action="/Logga_in" method="POST">
                     <h1>Login</h1>
                     <div class="Input-box">
                         <input type="text" name="email" placeholder="Användarnamn" required>
@@ -75,7 +75,6 @@
                                     <path
                                         d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z" />
                                 </svg>
-
                                 Fel användarnamn eller lösenord!
                             </p>
                         </div>
