--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -26,7 +26,8 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/">Hem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Krishantering">Krishantering</a>
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page"
+                            href="/Krishantering">Krishantering</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Ny">Publicera inlägg</a>
@@ -36,19 +37,19 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
-                            <br>Registrera dig</a></a>
+                            <br>Registrera dig</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main class="container-md mt-4 mb-5">
+    <main class="container-md mt-4 pb-5">
         <div class="row border-bottom">
             <div class="col-md-3 general_light_blue"></div>
             <div class="col-md-9 py-3">
                 <h1 class="ms-4 mt-4">Krishantering</h1>
-                <h5 class="ms-4">Här hittar du användbar information om hur du som privatperson bör agera i  olika
+                <h5 class="ms-4">Här hittar du användbar information om hur du som privatperson bör agera i olika
                     typer av nödsituationer, samt vem du kan kontakta i händelse av kris.</h5>
             </div>
         </div>
@@ -134,6 +135,7 @@
             </div>
         </div>
     </main>
+
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
@@ -141,7 +143,6 @@
                 <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
                 <div class="col-10"></div>
             </div>
-
         </div>
     </footer>
 
