--- a/views/contact.html
+++ b/views/contact.html
@@ -35,16 +35,17 @@
           </li>
           <li class="nav-item">
             <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
-              <br>Registrera dig</a></a>
+              <br>Registrera dig</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="container-md mb-5">
+  <div class="container-md">
     <div class="row">
-      <aside class="col-12 col-md-3 general_light_blue">
+      <!--Aside Content-->
+      <aside class="col-12 col-md-3 pb-5 general_light_blue">
         <h3 class="mt-4 text-center">Vanliga frågor</h3>
         <div class="accordion accordion-flush mt-3 mb-5 mx-2" id="accordionFlushExample">
           <div class="accordion-item">
@@ -90,7 +91,8 @@
         </div>
       </aside>
 
-      <main class="col-12 col-md-9">
+      <!--Main content-->
+      <main class="col-12 col-md-9 pb-5">
         <h1 class="ms-4 mt-4">Kontakta oss</h1>
         <form action="#!">
           <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
@@ -135,23 +137,10 @@
             </div>
           </div>
         </form>
-
-
+      </main>
     </div>
   </div>
-  </div>
-  </div>
-  </section>
 
-  </div>
-  </div>
-  </div>
-  </div>
-  </section>
-  </main>
-
-  </div>
-  </div>
   <!--Footer-->
   <footer class="footer bg-dark p-3" data-bs-theme="dark">
     <div class="container-fluid">
@@ -159,7 +148,6 @@
         <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
         <div class="col-10"></div>
       </div>
-
     </div>
   </footer>
 
