--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
-                            <br>Registrera dig</a></a>
+                            <br>Registrera dig</a>
                     </li>
                 </ul>
             </div>
@@ -44,11 +44,11 @@
     </nav>
 
     <!--Wrapper-->
-    <div class="container-md mb-5">
+    <div class="container-md">
         <div class="row">
 
             <!--Aside content-->
-            <aside class="col-12 col-md-3 general_light_blue">
+            <aside class="col-12 col-md-3 pb-5 general_light_blue">
                 <h3 class="mt-4 text-center">Filtrering</h3>
                 <hr>
                 <form action="" class="mb-3">
@@ -105,9 +105,6 @@
                         <h6>Datum för publicering</h6>
                     </label>
                     <input class="form-control widht-select mx-auto mt-2 mb-3" type="date" id="date" name="date">
-
-
-
                     <h4 class="mt-2 text-center">Källa</h4>
                     <!--Bootstrap checkbox, switch-->
                     <div class="form-check form-switch d-flex justify-content-center mt-3">
@@ -126,7 +123,7 @@
             </aside>
 
             <!--Main content-->
-            <main class="col-12 col-md-9">
+            <main class="col-12 col-md-9 pb-5">
                 <div class="row">
                     <!--Events-->
                     <div>
@@ -213,10 +210,10 @@
                         </div>
                     </div>
                 </div>
+            </main>
         </div>
     </div>
-    </main>
-    </div>
+
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
@@ -224,7 +221,6 @@
                 <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
                 <div class="col-10"></div>
             </div>
-
         </div>
     </footer>
 
