--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -55,11 +55,10 @@
                 <p class="ms-4"> <b>Har du sett eller varit med om något som du vill informera allmänheten
                         om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
-                <form action="/Ny" method="post" class="form_publish_post mt-3 p-3">
+                <form action="/Ny" method="post" class="mt-3 p-3">
                     <div class="col-10 col-sm-9 col-md-5">
-                        <label for="category" class="form-label">
-                            <h3 class="ms-4 mt-3">Kriskategori<span class="text-danger">*</span>
-                        </label></h3>
+                        <label for="category" class="form-label ms-4 mt-3 h4">Kriskategori<span
+                                class="text-danger">*</span>
                         </label>
                         <input class="form-control ms-4" list="categoryOptions" id="category" name="category"
                             placeholder="Sök..." value={{category}}>
@@ -77,10 +76,8 @@
                     </div>
                     <div class="row">
                         <div class="col-10 col-sm-9 col-md-5 p-2">
-                            <label for="city" class="form-label">
-                                <h3 class="ms-4 mt-2">Stad<span class="text-danger">*</span>
-                            </label></h3>
-                            </label>
+                            <label for="city" class="form-label ms-4 mt-2 h4">Stad<span
+                                    class="text-danger">*</span></label>
                             <input class="form-control ms-4" list="cityOptions" id="city" name="city"
                                 placeholder="Sök..." value={{city}}>
                             <datalist id="cityOptions">
@@ -91,10 +88,10 @@
                             <p class="feedback_message_register ms-4"><small>{{no_city}}</small></p>
                         </div>
                         <div class="col-10 col-sm-9 col-md-5 p-2">
-                            <label for="ZIP-code" class="form-label">
-                                <h3 class="ms-4 mt-2">Postnummer<span class="text-danger">*</span>
-                            </label></h3>
+                            <label for="ZIP-code" class="form-label ms-4 mt-2 h4">
+                                Postnummer<span class="text-danger">*</span>
                             </label>
+
                             <input class="form-control ms-4" list="zipOptions" id="ZIP-code" name="ZIP-code"
                                 placeholder="Sök..." value={{zip_code}}>
                             <datalist id="zipOptions">
@@ -115,10 +112,8 @@
                 </form>
             </div>
         </div>
-
-
-
     </main>
+
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
