--- a/views/register.html
+++ b/views/register.html
@@ -45,24 +45,23 @@
     </nav>
 
     <!--Wrapper-->
-    <div class="container-md mb-5">
+    <div class="container-md">
         <div class="row">
             <main class="col-12 col-md-9 mx-auto">
-                <h1 class="ms-4 mt-4 general_light_blue">Registrera dig</h1>
+                <h1 class="ms-4 mt-4">Registrera dig</h1>
                 <div class="px-3 pt-3">
-                    <h4>Som registrerad användare kan du:</h3>
-                        <ul>
-                            <li>Publicera inlägg</li>
-                            <li>Bekräfta andra användares inlägg</li>
-                            <li>Få mejlnotiser vid krissituation i din närhet</li>
-                        </ul>
+                    <h4>Som registrerad användare kan du:</h4>
+                    <ul>
+                        <li>Publicera inlägg</li>
+                        <li>Bekräfta andra användares inlägg</li>
+                        <li>Få mejlnotiser vid krissituation i din närhet</li>
+                    </ul>
                 </div>
-
                 <p>Fyll i dina uppgifter nedan!</p>
                 <hr>
-                <form action="/Registrering" method="POST">
-                    <label for="email" class="form-label">
-                        <h4>Mejladress</h4>
+                <form action="/Registrering" method="POST" class="pb-5">
+                    <label for="email" class="form-label h4">
+                        Mejladress
                     </label><br>
                     <div class="input-group">
                         <span class="input-group-text">
@@ -76,18 +75,11 @@
                             value={{email}}>
                     </div>
                     <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
-                    <label for="birthday">
-                        <h4 class="mt-3">Födelsedatum</h4>
-                    </label>
-
+                    <label for="birthday" class="mt-3 h4">Födelsedatum</label>
                     <input class="form-control" type="date" id="birthday" name="birthday" value={{birthday}}>
                     <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
-
-
-                    <label for="pwd">
-                        <h4 class="mt-3">Lösenord</h4>
-                    </label>
+                    <label for="pwd" class="mt-3 h4">Lösenord</label>
                     <input class="form-control" type="password" id="pwd" name="pwd">
                     <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
@@ -95,10 +87,11 @@
                     <br>
                     <input type="submit" value="Registrera mig" class="btn btn-dark mt-4">
                 </form>
-        
+
             </main>
         </div>
     </div>
+
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
