--- a/views/login.html
+++ b/views/login.html
@@ -51,7 +51,7 @@
                 <form action="/Logga_in" method="POST">
                     <h1>Login</h1>
                     <div class="Input-box">
-                        <input type="text" name="email" placeholder="Användarnamn" required>
+                        <input type="text" name="email" placeholder="Användarnamn" value = "{{user_name}}"required>
                         <i class='bx bx-user'></i>
                     </div>
                     <div class="Input-box">
