--- a/views/index.html
+++ b/views/index.html
@@ -133,12 +133,37 @@
                             <div class="card-body">
                                 <h5 class="card-title">Krisrubrik</h5>
                                 <div class="row">
-                                    <div class="col-lg-7 col-md-8">
+                                    <div class="col-lg-7 col-md-12">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
                                             aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
                                         </p>
                                     </div>
-                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                    <div class="col-lg-5 col-md-12 d-flex justify-content-center">
+                                        <div class="d-flex align-items-end mb-3 me-3">
+                                            <span>
+                                                <button type="button" onclick="myFunction()"
+                                                    class="icon_confirm_post"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="45" height="45" fill="#8698B3"
+                                                        class="bi bi-caret-up-fill icon_confirm_post"
+                                                        viewBox="0 0 16 16">
+                                                        <path
+                                                            d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z" />
+                                                    </svg></button>
+                                                <p class="text-center my-auto">30%</p>
+                                            </span>
+                                            <span>
+
+                                                <p class="text-center my-auto">70%</p>
+                                                <button type="button" onclick="myFunction()" class="icon_confirm_post">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
+                                                        fill="#8698B3" class="bi bi-caret-down-fill icon_confirm_post"
+                                                        viewBox="0 0 16 16">
+                                                        <path
+                                                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                                                    </svg>
+                                                </button>
+                                            </span>
+                                        </div>
                                         <img class="img-thumbnail rounded-circle icon-post"
                                             src="https://picsum.photos/200/300" alt="">
                                     </div>
@@ -149,18 +174,43 @@
                             </div>
                         </div>
                         <!--Post-->
-                        <div class="card mx-4 mt-4">
+                        <div class="card mx-4 mt-3">
                             <div class="card-body">
                                 <h5 class="card-title">Krisrubrik</h5>
                                 <div class="row">
-                                    <div class="col-lg-7 col-md-8">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia
-                                            asperiores
-                                            dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                    <div class="col-lg-7 col-md-12">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
+                                            aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
+                                        </p>
                                     </div>
-                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                    <div class="col-lg-5 col-md-12 d-flex justify-content-center">
+                                        <div class="d-flex align-items-end mb-3 me-3">
+                                            <span>
+                                                <button type="button" onclick="myFunction()"
+                                                    class="icon_confirm_post"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="45" height="45" fill="#8698B3"
+                                                        class="bi bi-caret-up-fill icon_confirm_post"
+                                                        viewBox="0 0 16 16">
+                                                        <path
+                                                            d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z" />
+                                                    </svg></button>
+                                                <p class="text-center my-auto">40%</p>
+                                            </span>
+                                            <span>
+
+                                                <p class="text-center my-auto">60%</p>
+                                                <button type="button" onclick="myFunction()" class="icon_confirm_post">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
+                                                        fill="#8698B3" class="bi bi-caret-down-fill icon_confirm_post"
+                                                        viewBox="0 0 16 16">
+                                                        <path
+                                                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                                                    </svg>
+                                                </button>
+                                            </span>
+                                        </div>
                                         <img class="img-thumbnail rounded-circle icon-post"
-                                            src="https://picsum.photos/208/300" alt="">
+                                            src="https://picsum.photos/240/300" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -169,38 +219,42 @@
                             </div>
                         </div>
                         <!--Post-->
-                        <div class="card mx-4 mt-4">
+                        <div class="card mx-4 mt-3">
                             <div class="card-body">
                                 <h5 class="card-title">Krisrubrik</h5>
                                 <div class="row">
-                                    <div class="col-lg-7 col-md-8">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia
-                                            asperiores
-                                            dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                    <div class="col-lg-7 col-md-12">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
+                                            aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
+                                        </p>
                                     </div>
-                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                        <img class="img-thumbnail rounded-circle icon-post
-                                        src=" https://picsum.photos/218/300" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-footer small text-muted">
-                                Publicerad: ÅÅ-MM-DD, HH:SS:MM
-                            </div>
-                        </div>
-                        <!--Post-->
-                        <div class="card mx-4 mt-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Krisrubrik</h5>
-                                <div class="row">
-                                    <div class="col-lg-7 col-md-8">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia
-                                            asperiores
-                                            dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
-                                    </div>
-                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                        <img class="img-thumbnail rounded-circle icon-post
-                                        src=" https://picsum.photos/208/340" alt="">
+                                    <div class="col-lg-5 col-md-12 d-flex justify-content-center">
+                                        <div class="d-flex align-items-end mb-3 me-3">
+                                            <span>
+                                                <button type="button" onclick="myFunction()"
+                                                    class="icon_confirm_post"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="45" height="45" fill="#8698B3"
+                                                        class="bi bi-caret-up-fill icon_confirm_post"
+                                                        viewBox="0 0 16 16">
+                                                        <path
+                                                            d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z" />
+                                                    </svg></button>
+                                                <p class="text-center my-auto">50%</p>
+                                            </span>
+                                            <span>
+                                                <p class="text-center my-auto">50%</p>
+                                                <button type="button" onclick="myFunction()" class="icon_confirm_post">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
+                                                        fill="#8698B3" class="bi bi-caret-down-fill icon_confirm_post"
+                                                        viewBox="0 0 16 16">
+                                                        <path
+                                                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                                                    </svg>
+                                                </button>
+                                            </span>
+                                        </div>
+                                        <img class="img-thumbnail rounded-circle icon-post"
+                                            src="https://picsum.photos/200/340" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -211,23 +265,20 @@
                     </div>
                 </div>
             </main>
-        </div>
-    </div>
-
-    <!--Footer-->
-    <footer class="footer bg-dark p-3" data-bs-theme="dark">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
-                <div class="col-10"></div>
+        <!--Footer-->
+        <footer class="footer bg-dark p-3" data-bs-theme="dark">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
+                    <div class="col-10"></div>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
-    <!--BootstrapJS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <!--BootstrapJS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
