--- a/views/index.html
+++ b/views/index.html
@@ -47,79 +47,92 @@
     <div class="container-md">
         <div class="row">
 
-            <!--Aside content-->
-            <aside class="col-12 col-md-3 pb-5 general_light_blue">
-                <h3 class="mt-4 text-center">Filtrering</h3>
-                <hr>
-                <form action="" class="mb-3">
+            <aside class="col-12 col-md-3 general_light_blue">
+                <p class="inline-block gap-1 text-center align-middle mt-2">
+                    <button class="col-12 icon_confirm_post hover_collapse" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFilter" aria-expanded="false" aria-controls="collapseExample">
+                        <p class="h3 mt-4">Filtrering</p>
 
-                    <!--Categories-->
-                    <label class="d-flex justify-content-center text-center form-label" for="category">
-                        <h6>Riskkategori</h6>
-                    </label>
-                    <input class="form-control widht-select mx-auto mt-2 mb-3" list="categoryOptions" id="category"
-                        name="category" placeholder="Sök...">
-                    <datalist id="categoryOptions">
-                        <option value="Brand">
-                        <option value="Skottlossning">
-                        <option value="Rökutveckling">
-                            <!--
+                    </button>
+                    <hr>
+                </p>
+                <div class="collapse" id="collapseFilter">
+                    <div>
+                        <form action="" class="mb-3">
+
+                            <!--Categories-->
+                            <label class="d-flex justify-content-center text-center form-label" for="category">
+                                <h6>Riskkategori</h6>
+                            </label>
+                            <input class="form-control widht-select mx-auto mt-2 mb-3" list="categoryOptions"
+                                id="category" name="category" placeholder="Sök...">
+                            <datalist id="categoryOptions">
+                                <option value="Brand">
+                                <option value="Skottlossning">
+                                <option value="Rökutveckling">
+                                    <!--
                                 Python:
                                 for i in cities print <option value="i">i</option>?
                             -->
-                    </datalist>
+                            </datalist>
 
-                    <!--City-->
-                    <label class="d-flex justify-content-center text-center form-label" for="city">
-                        <h6>Stad</h6>
-                    </label>
-                    <input class="form-control widht-select mx-auto mt-2 mb-3" list="cityOptions" id="city" name="city"
-                        placeholder="Sök...">
-                    <datalist id="cityOptions">
-                        <option value="Malmö">
-                        <option value="Lund">
-                        <option value="Karlshamn">
-                            <!--
+                            <!--City-->
+                            <label class="d-flex justify-content-center text-center form-label" for="city">
+                                <h6>Stad</h6>
+                            </label>
+                            <input class="form-control widht-select mx-auto mt-2 mb-3" list="cityOptions" id="city"
+                                name="city" placeholder="Sök...">
+                            <datalist id="cityOptions">
+                                <option value="Malmö">
+                                <option value="Lund">
+                                <option value="Karlshamn">
+                                    <!--
                                 Python:
                                 for i in cities print <option value="i">i</option>?
                             -->
-                    </datalist>
+                            </datalist>
 
-                    <!--Zip-code-->
-                    <label class="d-flex justify-content-center text-center form-label" for="ZIP-code">
-                        <h6>Postnummer</h6>
-                    </label>
-                    <input class="form-control widht-select mx-auto mt-2 mb-3" list="zipOptions" id="ZIP-code"
-                        name="ZIP-code" placeholder="Sök...">
-                    <datalist id="zipOptions">
-                        <option value="21110">
-                        <option value="21111">
-                        <option value="21112">
-                            <!--
+                            <!--Zip-code-->
+                            <label class="d-flex justify-content-center text-center form-label" for="ZIP-code">
+                                <h6>Postnummer</h6>
+                            </label>
+                            <input class="form-control widht-select mx-auto mt-2 mb-3" list="zipOptions" id="ZIP-code"
+                                name="ZIP-code" placeholder="Sök...">
+                            <datalist id="zipOptions">
+                                <option value="21110">
+                                <option value="21111">
+                                <option value="21112">
+                                    <!--
                                 Python:
                                 for i in cities print <option value="i">i</option>?
                             -->
-                    </datalist>
+                            </datalist>
 
-                    <label class="d-flex justify-content-center text-center form-label" for="date">
-                        <h6>Datum för publicering</h6>
-                    </label>
-                    <input class="form-control widht-select mx-auto mt-2 mb-3" type="date" id="date" name="date">
-                    <h4 class="mt-2 text-center">Källa</h4>
-                    <!--Bootstrap checkbox, switch-->
-                    <div class="form-check form-switch d-flex justify-content-center mt-3">
-                        <input class="form-check-input me-2" type="checkbox" id="switchPolice">
-                        <label class="form-check-label" for="switchPolice"> Polisen.se</label>
+                            <label class="d-flex justify-content-center text-center form-label" for="date">
+                                <h6>Datum för publicering</h6>
+                            </label>
+                            <input class="form-control widht-select mx-auto mt-2 mb-3" type="date" id="date"
+                                name="date">
+                            <h4 class="mt-2 text-center">Källa</h4>
+                            <!--Bootstrap checkbox, switch-->
+                            <div class="form-check form-switch d-flex justify-content-center mt-3">
+                                <input class="form-check-input me-2" type="checkbox" id="switchPolice">
+                                <label class="form-check-label" for="switchPolice"> Polisen.se</label>
+                            </div>
+                            <!--Bootstrap checkbox, switch-->
+                            <div class="form-check form-switch d-flex justify-content-center mt-2">
+                                <input class="form-check-input me-2" type="checkbox" id="switchKrisKlar">
+                                <label class="form-check-label" for="switchKrisKlar"> KrisKlar.se</label>
+                            </div>
+                            <div class="d-flex justify-content-center mt-4">
+                                <input type="submit" class="btn btn-dark" value="Hitta händelser">
+                            </div>
+                        </form>
                     </div>
-                    <!--Bootstrap checkbox, switch-->
-                    <div class="form-check form-switch d-flex justify-content-center mt-2">
-                        <input class="form-check-input me-2" type="checkbox" id="switchKrisKlar">
-                        <label class="form-check-label" for="switchKrisKlar"> KrisKlar.se</label>
-                    </div>
-                    <div class="d-flex justify-content-center mt-4">
-                        <input type="submit" class="btn btn-dark" value="Hitta händelser">
-                    </div>
-                </form>
+                </div>
+
+
+                <!--Aside content-->
             </aside>
 
             <!--Main content-->
@@ -265,20 +278,20 @@
                     </div>
                 </div>
             </main>
-        <!--Footer-->
-        <footer class="footer bg-dark p-3" data-bs-theme="dark">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
-                    <div class="col-10"></div>
+            <!--Footer-->
+            <footer class="footer bg-dark p-3" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
+                        <div class="col-10"></div>
+                    </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
 
-        <!--BootstrapJS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+            <!--BootstrapJS-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
