--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -55,13 +55,13 @@
                 <p class="ms-4"> <b>Har du sett eller varit med om något som du vill informera allmänheten
                         om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
-                <form id="myForm" action="#!">
-                <form action="/Ny" method="post" class="form_publish_post mt-3 p-3">
+                <!--id="myForm"-->
+                <form action="/Ny" method="POST" class="form_publish_post mt-3 p-3">
                     <div class="col-10 col-sm-9 col-md-5">
                         <label for="category" class="form-label ms-4 mt-3 h4">Kriskategori<span
                                 class="text-danger">*</span>
                         </label>
-                        <input class="form-control ms-4" list="categoryOptions" id="category" name="category" required
+                        <input class="form-control ms-4" list="categoryOptions" id="category" name="category"
                             placeholder="Sök..." value={{category}}>
                         <datalist id="categoryOptions">
                             <option value="Brand">
@@ -83,7 +83,7 @@
                                 <h3 class="ms-4 mt-2">Stad<span class="text-danger">*</span>
                             </label></h3>
                             </label>
-                            <input class="form-control ms-4" list="cityOptions" id="city" name="city" required
+                            <input class="form-control ms-4" list="cityOptions" id="city" name="city"
                                 placeholder="Sök..." value={{city}}>
                             <datalist id="cityOptions">
                                 <option value="Malmö">
@@ -96,7 +96,7 @@
                             <label for="ZIP-code" class="form-label ms-4 mt-2 h4">
                                 Postnummer<span class="text-danger">*</span>
                             </label>
-                            <input class="form-control ms-4" list="zipOptions" id="ZIP-code" name="ZIP-code" required
+                            <input class="form-control ms-4" list="zipOptions" id="ZIP-code" name="ZIP-code"
                                 placeholder="Sök..." value={{zip_code}}>
                             <datalist id="zipOptions">
                                 <option value="21110">
@@ -107,12 +107,13 @@
                         </div>
                     </div>
                     <div class="form-check ms-4 mt-2">
-                        <input class="form-check-input" type="checkbox" value="" id="confirmation" required>
+                        <input class="form-check-input" type="checkbox" value="" id="confirmation">
                         <label class="form-check-label" for="confirmation">
                             Den information som jag har uppgett är sanningsenlig
                         </label>
                     </div>
-                    <input type="submit" class="btn btn-dark ms-4 mt-4 mb-4" data-dismiss="alert" value="Publicera händelse">
+                    <input type="submit" class="btn btn-dark ms-4 mt-4 mb-4" data-dismiss="alert"
+                        value="Publicera händelse">
                 </form>
             </div>
         </div>
@@ -132,25 +133,25 @@
         </div>
     </footer>
 
-    
+
     <!--BootstrapJS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-    
-<!-- JavaScript for Pop-up Message -->
-<script>
-function handleSubmit(event) {
-  event.preventDefault();
-  
-  alert("Bra jobbat! Din händelse är nu publicerad!");
-  
-  window.location.href = "/";
-}
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
-document.getElementById("myForm").addEventListener("submit", handleSubmit);
+    <!-- JavaScript for Pop-up Message -->
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault();
 
-</script>
+            alert("Bra jobbat! Din händelse är nu publicerad!");
+
+            window.location.href = "/";
+        }
+
+        document.getElementById("myForm").addEventListener("submit", handleSubmit);
+
+    </script>
 </body>
 
 </html>
